--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="100-vh"></div>
     <div id="modal"></div>
     <!--
       This HTML file is a template.
